Eevee ambient occlusion is incorrect on M1 macMini #87801

Closed
opened 2021-04-25 12:48:30 +02:00 by Zoltán András Heiner · 31 comments

System Information
Operating system: macOS-11.2.3-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.0.7

Blender Version
Broken version: 2.93.0 Beta, branch: master (modified), commit date: 2021-04-19 10:12, hash: 6dffdb02fa
Note: Earlier versions I tested (running with Rosetta 2) all have this bug.

Short description of error
Eevee ambient occlusion is incorrect on M1 macMini.

Exact steps for others to reproduce the error
From default scene:

  • add a plane
  • scale it 10 times
  • move it down 1 unit
  • switch to material preview or rendered viewport shading
  • enable ambient occlusion
  • to best see the issue, set its parameters to [ 1.0, 1.0, 0.0, false, false ]
  • issue already visible
  • render image to still see it
    Note: Every file, every combination of settings produce this issue to some extent.Screen Shot 2021-04-25 at 12.48.png
**System Information** Operating system: macOS-11.2.3-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 71.0.7 **Blender Version** Broken version: 2.93.0 Beta, branch: master (modified), commit date: 2021-04-19 10:12, hash: `6dffdb02fa` Note: Earlier versions I tested (running with Rosetta 2) all have this bug. **Short description of error** Eevee ambient occlusion is incorrect on M1 macMini. **Exact steps for others to reproduce the error** From default scene: - add a plane - scale it 10 times - move it down 1 unit - switch to material preview or rendered viewport shading - enable ambient occlusion - to best see the issue, set its parameters to [ 1.0, 1.0, 0.0, false, false ] - issue already visible - render image to still see it Note: Every file, every combination of settings produce this issue to some extent.![Screen Shot 2021-04-25 at 12.48.png](https://archive.blender.org/developer/F10037278/Screen_Shot_2021-04-25_at_12.48.png)

Added subscriber: @Andari

Added subscriber: @Andari

#91176 was marked as duplicate of this issue

#91176 was marked as duplicate of this issue

#90086 was marked as duplicate of this issue

#90086 was marked as duplicate of this issue

#87650 was marked as duplicate of this issue

#87650 was marked as duplicate of this issue

Added subscriber: @Lucas-Bleackley-Petter

Added subscriber: @Lucas-Bleackley-Petter

I can confirm this issue is happening on Apple Silicon Macs. I'm noticing it on my 2020 Mac mini M1 and it affects both the 2.92.0 release and the latest arm64 2.93.0 Beta (c75b2019e1).

Here's a .blend file I created following the steps above to reproduce the error:
Ambient Occlusion Test.blend

On a 2018 MacBook Pro Intel, running the 2.92.0 release on macOS 10.15.7, this is what the viewport and renders of the above .blend file look like, as expected:
{F10102598}MacBook Pro Intel 2018 - Ambient Occlusion - Blender 2.92.0.jpg

On the Mac mini M1, running the arm64 2.93.0 Beta (c75b2019e1) on macOS 11.3.1, this is what the viewport and renders look like. The glitching is very noticeable.
{F10102579}Mac mini M1 2020 - Ambient Occlusion - Blender 2.93.0 Beta.jpg

On the Mac mini M1, running the 2.92.0 release via Rosetta 2 on macOS 11.3.1, this is what the viewport and renders look like. The glitching is noticeable in the viewport, but the render less so, although the render is still incorrect compared to the render from the Intel MacBook Pro above.
{F10102587}Mac mini M1 2020 - Ambient Occlusion - Blender 2.92.0.jpg

I can confirm this issue is happening on Apple Silicon Macs. I'm noticing it on my 2020 Mac mini `M1` and it affects both the 2.92.0 release and the latest arm64 2.93.0 Beta (c75b2019e101). Here's a .blend file I created following the steps above to reproduce the error: [Ambient Occlusion Test.blend](https://archive.blender.org/developer/F10102568/Ambient_Occlusion_Test.blend) On a **2018 MacBook Pro Intel**, running the **2.92.0 release** on macOS 10.15.7, this is what the viewport and renders of the above .blend file look like, as expected: {[F10102598](https://archive.blender.org/developer/F10102598/MacBook_Pro_Intel_2018_-_Ambient_Occlusion_Screenshot_-_Blender_2.92.0.jpg)}![MacBook Pro Intel 2018 - Ambient Occlusion - Blender 2.92.0.jpg](https://archive.blender.org/developer/F10102600/MacBook_Pro_Intel_2018_-_Ambient_Occlusion_-_Blender_2.92.0.jpg) On the **Mac mini `M1`**, running the **arm64 2.93.0 Beta** (c75b2019e101) on macOS 11.3.1, this is what the viewport and renders look like. The glitching is very noticeable. {[F10102579](https://archive.blender.org/developer/F10102579/Mac_mini_M1_2020_-_Ambient_Occlusion_Screenshot_-_Blender_2.93.0_Beta.jpg)}![Mac mini M1 2020 - Ambient Occlusion - Blender 2.93.0 Beta.jpg](https://archive.blender.org/developer/F10102580/Mac_mini_M1_2020_-_Ambient_Occlusion_-_Blender_2.93.0_Beta.jpg) On the **Mac mini `M1`**, running the **2.92.0 release** via Rosetta 2 on macOS 11.3.1, this is what the viewport and renders look like. The glitching is noticeable in the viewport, but the render less so, although the render is still incorrect compared to the render from the Intel MacBook Pro above. {[F10102587](https://archive.blender.org/developer/F10102587/Mac_mini_M1_2020_-_Ambient_Occlusion_Screenshot_-_Blender_2.92.0.jpg)}![Mac mini M1 2020 - Ambient Occlusion - Blender 2.92.0.jpg](https://archive.blender.org/developer/F10102589/Mac_mini_M1_2020_-_Ambient_Occlusion_-_Blender_2.92.0.jpg)

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Adding MacOS as a tag here since you are facing the problem on Mac.

Btw I am not able to reproduce it on Windows.



Operating system : Windows-10-10.0.18362-SP0 64 Bits
Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Adding MacOS as a tag here since you are facing the problem on Mac. Btw I am not able to reproduce it on Windows. --- ```System Information: Operating system : Windows-10-10.0.18362-SP0 64 Bits Graphics card : AMD Radeon(TM) 535 ATI Technologies .```
Collaborator

Added subscriber: @ankitm

Added subscriber: @ankitm
Collaborator

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Collaborator

There's no M1 in triaging team, but confirming due to easy steps, and active reporters.

There's no M1 in triaging team, but confirming due to easy steps, and active reporters.

Added subscriber: @JacobMerrill-1

Added subscriber: @JacobMerrill-1

it would be neat to have 'teamviewer' or something like that be used to confirm issues / even test builds etc on willing users machines

it would be neat to have 'teamviewer' or something like that be used to confirm issues / even test builds etc on willing users machines
Collaborator

Added subscribers: @ColbyKlein, @mano-wii

Added subscribers: @ColbyKlein, @mano-wii

Added subscriber: @jon_b

Added subscriber: @jon_b

I'd donate an account of this M1 cloud server if it would get used to fix Blender M1 bugs:
https://www.scaleway.com/en/hello-m1/

I'd donate an account of this M1 cloud server if it would get used to fix Blender M1 bugs: https://www.scaleway.com/en/hello-m1/

Any way we can move this forward? (not complaining, but I'm just ignorant of the process)

This is a critical bug for any M1 users who are planning on EEVEE as a final render option.

Any way we can move this forward? (not complaining, but I'm just ignorant of the process) This is a critical bug for any M1 users who are planning on EEVEE as a final render option.

I was able to build Blender from source on my M1 MacMini without any issues. I started experimenting with the Eevee AO shader without success on figuring out what this issue is. I do not have enough time to properly look into it though. If anyone has the faintest idea what this is caused by, let me know, and I will try to squeeze in the time to check it. My idea was that it might have something to do with what the depth component of the framebuffer samples outside its borders.

I was able to build Blender from source on my M1 MacMini without any issues. I started experimenting with the Eevee AO shader without success on figuring out what this issue is. I do not have enough time to properly look into it though. If anyone has the faintest idea what this is caused by, let me know, and I will try to squeeze in the time to check it. My idea was that it might have something to do with what the depth component of the framebuffer samples outside its borders.
Collaborator
Added subscribers: @CorradoPiscitelli, @fclem, @Jeroen-Bakker, @icappiello

Confirmed on M1 iMacs and Blender 2.93.1

System Information
Operating system: macOS-11.4-arm64-arm-64bit 64 Bits
Graphics card: Apple M1 Apple 4.1 Metal - 71.6.4

Blender Version
Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: 1b8d33b18c
Worked: (newest version of Blender that worked as expected)

Short description of error
Different AO results between apple M1 and Intel machines.
Opening the same file in rendered on EEVEE on an M1 machine gives different results from an Intel one.
See attached image for visual reference comparison.png
Please note that both Rosetta and native ARM are consistent in this result.

Exact steps for others to reproduce the error
Set view in rendered. The effect becomes move visible changing ambient occlusion distance and factor values.
Based on attached .blend file Apple_M1_AO_bug.blend

Confirmed on M1 iMacs and Blender 2.93.1 **System Information** Operating system: macOS-11.4-arm64-arm-64bit 64 Bits Graphics card: Apple M1 Apple 4.1 Metal - 71.6.4 **Blender Version** Broken: version: 2.93.1, branch: master, commit date: 2021-06-22 05:57, hash: `1b8d33b18c` Worked: (newest version of Blender that worked as expected) **Short description of error** Different AO results between apple M1 and Intel machines. Opening the same file in rendered on EEVEE on an M1 machine gives different results from an Intel one. See attached image for visual reference ![comparison.png](https://archive.blender.org/developer/F10235050/comparison.png) Please note that both Rosetta and native ARM are consistent in this result. **Exact steps for others to reproduce the error** Set view in rendered. The effect becomes move visible changing ambient occlusion distance and factor values. Based on attached .blend file [Apple_M1_AO_bug.blend](https://archive.blender.org/developer/F10235048/Apple_M1_AO_bug.blend)
Collaborator

Added subscriber: @SensArice

Added subscriber: @SensArice

Added subscriber: @Khameir

Added subscriber: @Khameir

I would like to emphasise how this is currently a 100% pipeline breaker in our production as we heavily rely on EEVEE. Is there any chance to get an update on this? Thanks for all your hard work!

I would like to emphasise how this is currently a 100% pipeline breaker in our production as we heavily rely on EEVEE. Is there any chance to get an update on this? Thanks for all your hard work!

Yes, this has been an issue for about 6 months and has had no progress unfortunately. Could use some direction on how the community could help diagnose at least. This stops me from using EEVEE at all as a rendering engine.

Yes, this has been an issue for about 6 months and has had no progress unfortunately. Could use some direction on how the community could help diagnose at least. This stops me from using EEVEE at all as a rendering engine.
Clément Foucault self-assigned this 2021-09-18 12:56:23 +02:00

This will be tackled next week.

This will be tackled next week.

Thanks a lot Clément! Let me know if there is anything i could test for you!

Thanks a lot Clément! Let me know if there is anything i could test for you!

This issue was referenced by f2e96c2473

This issue was referenced by f2e96c2473a2c638faeea6bd5544d4dcdccc8a36

This issue was referenced by 84f98e28e3

This issue was referenced by 84f98e28e384f1245c11a81da57e74fa6130d286

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Hi!
I tested this with the latest build from builder.blender.org on my M1 iMac, and I have found no problems!
Thanks for the Fix!

Hi! I tested this with the latest build from builder.blender.org on my M1 iMac, and I have found no problems! Thanks for the Fix!

Thank you, @fclem!! Your fix works great. On 2.93.5RC, renders on Intel and Apple Silicon match each other. It has also resolved #88241 (macOS: Eevee Screen Space Reflections are broken on arm64), which can now be closed too!

Thank you, @fclem!! Your fix works great. On 2.93.5RC, renders on Intel and Apple Silicon match each other. It has also resolved #88241 (macOS: Eevee Screen Space Reflections are broken on arm64), which can now be closed too!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
Eevee & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest/Import
Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Eevee & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
10 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87801
There is no content yet.